test/compiler/fail/shouldaccessstructtype.bt
Struct sth {
    int a;
    string b;
    int c;
}
int a;
a.c = 5;
